# yukapika

./: README.md
ia_de_música/: main.py  pyproject.toml
ia_de_música/vamoo-main/chacha/: iafront.css  iafront.html  iafront.js
